--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>QUBED</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>React App</title>
+
+    <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: { families: ['Raleway:300,300i,500'] }
+      });
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -16,6 +27,13 @@
 
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
+    -->
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
+    <script>
+        window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+        ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     -->
   </body>
 </html>
